[gd_scene load_steps=6 format=3 uid="uid://uyo7h7tg55nb"]

[ext_resource type="Script" uid="uid://v8w3allmc65k" path="res://Scripts/Nachos/nacho_shop.gd" id="1_1sa8d"]
[ext_resource type="Texture2D" uid="uid://dd4p6yhgvu67s" path="res://Assets/backgroundcool.png" id="2_1sa8d"]
[ext_resource type="Texture2D" uid="uid://cktne2x4f32l" path="res://Assets/heart.png" id="3_3wrkd"]
[ext_resource type="Texture2D" uid="uid://1vwlrm0hicy3" path="res://Assets/empty64x64.png" id="3_qcnfh"]
[ext_resource type="PackedScene" uid="uid://gk1lglu6jxso" path="res://Scenes/timer.tscn" id="9_440gg"]

[node name="nacho_shop" type="Node2D"]
script = ExtResource("1_1sa8d")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.351563)
texture = ExtResource("2_1sa8d")
centered = false

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 472.0
offset_top = 40.0
offset_right = 640.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -37.5
offset_right = 82.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "NEED:
Tortillas, Oil,
Nacho Cheese, Milk"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 184.0
offset_top = 64.0
offset_right = 464.0
offset_bottom = 280.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="TextureButton" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../TextureButton3")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TextureButton2")
focus_next = NodePath("../TextureButton2")
focus_previous = NodePath("../TextureButton3")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="Label" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Tortillas"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Sour Cream"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Oil"
horizontal_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../TextureButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TextureButton3")
focus_next = NodePath("../TextureButton3")
focus_previous = NodePath("../TextureButton")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="Label4" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Avocados"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Nacho Cheese"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Salsa"
horizontal_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../TextureButton")
focus_next = NodePath("../TextureButton")
focus_previous = NodePath("../TextureButton2")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="Label7" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Beans"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Hot Sauce"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Milk"
horizontal_alignment = 1

[node name="Label10" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../TextureButton6")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../TextureButton5")
focus_next = NodePath("../TextureButton5")
focus_previous = NodePath("../TextureButton6")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="TextureButton5" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../TextureButton4")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../TextureButton6")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../TextureButton6")
focus_previous = NodePath("../TextureButton4")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="TextureButton6" type="TextureButton" parent="ColorRect/GridContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../TextureButton5")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../TextureButton4")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../TextureButton4")
focus_previous = NodePath("../TextureButton5")
texture_normal = ExtResource("3_qcnfh")
texture_focused = ExtResource("3_3wrkd")
stretch_mode = 3

[node name="Timer" parent="." instance=ExtResource("9_440gg")]

[connection signal="pressed" from="ColorRect/GridContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/TextureButton6" to="." method="_on_texture_button_6_pressed"]
[connection signal="time_done" from="Timer" to="." method="_on_timer_time_done"]
